tests/baselines/reference/noImplicitAnyParametersInModule.errors.txt
noImplicitAnyParametersInModule.ts(6,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(12,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(12,22): error TS7006: Parameter 'y' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(12,25): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(15,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(15,30): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(18,19): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
noImplicitAnyParametersInModule.ts(21,19): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(21,22): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
noImplicitAnyParametersInModule.ts(24,19): error TS7006: Parameter 'x1' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(25,31): error TS7006: Parameter 'y2' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(26,19): error TS7006: Parameter 'x3' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(26,23): error TS7006: Parameter 'y3' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(32,18): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(35,18): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(35,21): error TS7006: Parameter 'y' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(35,24): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(38,18): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(38,29): error TS7006: Parameter 'z' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(41,18): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
noImplicitAnyParametersInModule.ts(44,18): error TS7006: Parameter 'x' implicitly has an 'any' type.
noImplicitAnyParametersInModule.ts(44,21): error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.


==== noImplicitAnyParametersInModule.ts (22 errors) ====
    module M {
        // No implicit-'any' errors.
        function m_f1(): void { }
    
        // Implicit-'any' error for x.
        function m_f2(x): void { }
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        function m_f3(x: any): void { }
    
        // Implicit-'any' errors for x, y, and z.
        function m_f4(x, y, z): void { }
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                         ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                            ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any' errors for x and z.
        function m_f5(x, y: any, z): void { }
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                                 ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any[]' error for r.
        function m_f6(...r): void { }
                      ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // Implicit-'any'/'any[]' errors for x and r.
        function m_f7(x, ...r): void { }
                      ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                         ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // Implicit-'any' errors for x1, y2, x3, and y3.
        function m_f8(x1, y1: number): any;
                      ~~
!!! error TS7006: Parameter 'x1' implicitly has an 'any' type.
        function m_f8(x2: string, y2): any;
                                  ~~
!!! error TS7006: Parameter 'y2' implicitly has an 'any' type.
        function m_f8(x3, y3): any { }
                      ~~
!!! error TS7006: Parameter 'x3' implicitly has an 'any' type.
                          ~~
!!! error TS7006: Parameter 'y3' implicitly has an 'any' type.
    
        // No implicit-'any' errors.
        var m_f9 = () => "";
    
        // Implicit-'any' error for x.
        var m_f10 = (x) => "";
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
        // Implicit-'any' errors for x, y, and z.
        var m_f11 = (x, y, z) => "";
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                        ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
                           ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any' errors for x and z.
        var m_f12 = (x, y: any, z) => "";
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                                ~
!!! error TS7006: Parameter 'z' implicitly has an 'any' type.
    
        // Implicit-'any[]' errors for r.
        var m_f13 = (...r) => "";
                     ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    
        // Implicit-'any'/'any[]' errors for x and r.
        var m_f14 = (x, ...r) => "";
                     ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                        ~~~~
!!! error TS7019: Rest parameter 'r' implicitly has an 'any[]' type.
    }